Fixed overlaping issue or layout issues. Each section was overlaping each other depending if screen size changed. I already fixed many things with media controllers. But the solution was making all section but profile flex, making flex-direction column and justify-content.

--- a/style.css
+++ b/style.css
@@ -154,9 +154,13 @@ a:hover {
 
 
 /* SECTIONS */
-section {
+section:not(:first-of-type) {
     padding-top: 4vh;
-    height: 96vh;
+    padding-bottom: 4vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin: 0 10rem;
     box-sizing: border-box;
     min-height: fit-content;
